[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/formation/everyone_died.obj" type="ArrayMesh" id=1]
[ext_resource path="res://assets/formation/death_gradient.png" type="Texture" id=2]
[ext_resource path="res://assets/formation/oh_god_clowns_why.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/DeathMessage.gd" type="Script" id=4]

[sub_resource type="SpatialMaterial" id=1]
flags_world_triplanar = true
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 0.1, 0.85, 1 )
uv1_offset = Vector3( 0, 1, 0 )
uv1_triplanar = true

[sub_resource type="Environment" id=2]
background_mode = 1
ambient_light_color = Color( 1, 1, 1, 1 )

[node name="DeathMessage" type="Spatial"]
script = ExtResource( 4 )

[node name="EveryoneDied" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = ExtResource( 1 )
material/0 = SubResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
projection = 1
size = 11.0

[node name="Clown" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0504916, 0 )
pixel_size = 0.0625
frames = ExtResource( 3 )
animation = "south_idle"

[node name="BounceTween" type="Tween" parent="."]
[connection signal="tween_completed" from="BounceTween" to="." method="_on_BounceTween_tween_completed"]
[connection signal="tween_step" from="BounceTween" to="." method="_on_Tween_tween_step"]
